css/style.css
body {
  font-family: "Inter", sans-serif;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-height: 100vh;
  margin: 0;
  background-color: #09090c;
  color: white;
  overflow: auto;
}

#header {
  display: flex;
  flex-direction: column;
  text-align: center;
  justify-content: center;
}

#header h1 {
  margin: 0;
}

#header p {
  margin-bottom: 2.2rem;
  color: #6b7280;
}

.countdown-container {
  display: flex;
  font-size: 2rem;
  justify-content: center;
  align-items: center;
}

.countdown-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #212121;
  padding: 14px;
  border-radius: 5px;
}

.countdown-separator {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.countdown-labels {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  gap: 0.5rem;
}

.countdown-label {
  font-size: 0.75rem;
  text-transform: uppercase;
  color: #6b7280;
  font-weight: 600;
}

#wrapper {
  padding: 1rem;
  background-color: #100d1a;
  border-radius: 0.3rem;
  border: 1px solid #6b33ff;
}

@media only screen and (max-width: 768px) {
  body {
    font-size: 0.9rem;
  }

  #header h1 {
    font-size: 1.2rem;
  }

  #header p {
    font-size: 0.8rem;
  }

  .countdown-container {
    font-size: 1.5rem;
  }

  #wrapper {
    padding: 0.5rem;
  }
}

@media only screen and (max-width: 600px) {
  body {
    font-size: 0.8rem;
  }

  #header h1 {
    font-size: 1rem;
  }

  #header p {
    font-size: 0.7rem;
  }

  .countdown-container {
    font-size: 1.2rem;
  }

  #wrapper {
    padding: 0.3rem;
  }
}


.add-to-calendar-button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  background-color: #6b33ff;
  color: white;
  font-weight: 600;
  border-radius: 0.3rem;
  padding: 0.5rem;
  margin-top: 1rem;
  cursor: pointer;
  transition: all 0.2s ease-in-out; 
}

.add-to-calendar-button:hover {
  background-color: #5a24c4;
}

